<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
        android:id="@+id/german_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="20sp"
        android:hint="@string/german_label"
        android:paddingTop="@dimen/activity_vertical_margin" />


    <TextView
        android:id="@+id/partOfSpeech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="20sp"
        android:hint="@string/speech_label"
        android:paddingTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/english_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="20sp"
        android:hint="@string/english_label"
        android:paddingTop="@dimen/activity_vertical_margin"
        />

</LinearLayout>